implemented new schema logic (buggy)
